2010-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectWindow.m (-dealloc):
	* Modules/Editors/ProjectCenter/PCEditor.m (-dealloc):
	Attempt to prevent crashes when a project is closed by ensuring
	that project and editor windows are closed before their owners are
	deallocated.

2010-06-04 Riccardo Mottola <rmottola@users.sf.net>

	* TextFinder.m:
	check before replacing and allow undo (by Wolfgang Lux)

2010-06-03 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/Protocols/CodeEditorView.h:
	Declare new view protocol

	* Modules/Editors/ProjectCenter/PCEditorView.h
	* Modules/Editors/ProjectCenter/PCEditorView.m:
	Conform to CodeEditorView protocol and add accessor to the editor.

	* Framework/PCProjectWindow.m:
	Return the view's editor undo manager.

	* Modules/Preferences/Misc/PCMiscPrefs.m:
	declare strintg constants with @

2010-06-01 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m,
	* Modules\Editors\ProjectCenter\PCEditor.m:
	keep an undoManager for the Editor and return that to the window

2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/main.m: Same as below.

2010-05-30 03:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/AppController.h
	* Modules/Projects/Application/Resources/AppController.m
	* Modules/Projects/Tool/Resources/main.m: Remove licensing
	and copyright information from these since we don't want to 
	assume that the user will be writing a GPLv3 program owned by the
	FSF (while that would be nice) it's not correct to assume it.

2010-05-30 01:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/English.lproj/SaveModified.gorm: Correct issues with 
	Gorm file.
	* Framework/PCSaveModified.m: Use setTitle: instead of setStringValue:
	to set the titles of the buttons.
	
2010-05-30 01:44-EDT Gregory John Casamento <greg.casamento@gmail.com>
